force-app/main/default/objects/WorkOrder/fields/ALK_Air_Voltage_Corresponds_Instalation__c.field-meta.xml
<CustomField>
    <fullName>ALK_Air_Voltage_Corresponds_Instalation__c</fullName>
    <label>Voltaje Aire corresponde de instalación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ALK_SFS_Questionary_Answer</valueSetName>
    </valueSet>
</CustomField>