force-app/main/default/objects/WorkOrder/fields/ALK_All_Furniture_Pieces__c.field-meta.xml
<CustomField>
    <fullName>ALK_All_Furniture_Pieces__c</fullName>
    <label>Piezas del mueble completas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ALK_SFS_Questionary_Answer</valueSetName>
    </valueSet>
</CustomField>