force-app/main/default/objects/WorkOrder/fields/ALK_Authorized_Person__c.field-meta.xml
<CustomField>
    <fullName>ALK_Authorized_Person__c</fullName>
    <label>Persona autorizada a recibir el servicio</label>
    <length>60</length>
    <type>Text</type>
</CustomField>