force-app/main/default/objects/WorkOrder/fields/ALK_Basic_Training__c.field-meta.xml
<CustomField>
    <fullName>ALK_Basic_Training__c</fullName>
    <label>Se brinda capacitación de uso básico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ALK_SFS_Questionary_Answer</valueSetName>
    </valueSet>
</CustomField>