force-app/main/default/objects/WorkOrder/fields/ALK_Cantidad__c.field-meta.xml
<CustomField>
    <fullName>ALK_Cantidad__c</fullName>
    <label>Cantidad</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>