force-app/main/default/objects/WorkOrder/fields/ALK_Cellphone_Number__c.field-meta.xml
<CustomField>
    <fullName>ALK_Cellphone_Number__c</fullName>
    <label>Número de Celular</label>
    <type>Phone</type>
</CustomField>