force-app/main/default/objects/WorkOrder/fields/ALK_Connected_Devices__c.field-meta.xml
<CustomField>
    <fullName>ALK_Connected_Devices__c</fullName>
    <label>Se deja conectado a los siguiente:</label>
    <type>TextArea</type>
</CustomField>