force-app/main/default/objects/WorkOrder/fields/ALK_Correo_Electronico__c.field-meta.xml
<CustomField>
    <fullName>ALK_Correo_Electronico__c</fullName>
    <label>DEPRECATED Correo Electronico</label>
    <length>60</length>
    <type>Text</type>
</CustomField>