force-app/main/default/objects/WorkOrder/fields/ALK_Drain_Point__c.field-meta.xml
<CustomField>
    <fullName>ALK_Drain_Point__c</fullName>
    <label>Punto de desagüe en lugar de instalación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ALK_SFS_Questionary_Answer</valueSetName>
    </valueSet>
</CustomField>