force-app/main/default/objects/WorkOrder/fields/ALK_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>ALK_Email_Address__c</fullName>
    <label>Correo Electronico</label>
    <type>Email</type>
</CustomField>