force-app/main/default/objects/WorkOrder/fields/ALK_End_Questionnaire_Done__c.field-meta.xml
<CustomField>
    <fullName>ALK_End_Questionnaire_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cuestionario de Cierre Ejecutado</label>
    <type>Checkbox</type>
</CustomField>