force-app/main/default/objects/WorkOrder/fields/ALK_Fecha_Compra__c.field-meta.xml
<CustomField>
    <fullName>ALK_Fecha_Compra__c</fullName>
    <label>Fecha de compra</label>
    <type>Date</type>
</CustomField>