force-app/main/default/objects/WorkOrder/fields/ALK_Fecha_hora_de_Creaci_n__c.field-meta.xml
<CustomField>
    <fullName>ALK_Fecha_hora_de_Creaci_n__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha/hora de Creación</label>
    <type>DateTime</type>
</CustomField>