force-app/main/default/objects/WorkOrder/fields/ALK_FollowUp_WO__c.field-meta.xml
<CustomField>
    <fullName>ALK_FollowUp_WO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orden de trabajo de seguimiento</label>
    <type>Checkbox</type>
</CustomField>