force-app/main/default/objects/WorkOrder/fields/ALK_Gas_Near_Instalation__c.field-meta.xml
<CustomField>
    <fullName>ALK_Gas_Near_Instalation__c</fullName>
    <label>Punto a gas en el local de instalación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ALK_SFS_Questionary_Answer</valueSetName>
    </valueSet>
</CustomField>