force-app/main/default/objects/WorkOrder/fields/ALK_Handler_Corresponds_Condenser__c.field-meta.xml
<CustomField>
    <fullName>ALK_Handler_Corresponds_Condenser__c</fullName>
    <label>Manejadora corresponde con condensadora</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ALK_SFS_Questionary_Answer</valueSetName>
    </valueSet>
</CustomField>