force-app/main/default/objects/WorkOrder/fields/ALK_Height_Asked_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>ALK_Height_Asked_by_Customer__c</fullName>
    <label>A petición del cliente se deja a altura</label>
    <length>10</length>
    <type>Text</type>
</CustomField>