force-app/main/default/objects/WorkOrder/fields/ALK_Instalation_Kit__c.field-meta.xml
<CustomField>
    <fullName>ALK_Instalation_Kit__c</fullName>
    <label>KIT de Instalacion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>