force-app/main/default/objects/WorkOrder/fields/ALK_Instaled_Model__c.field-meta.xml
<CustomField>
    <fullName>ALK_Instaled_Model__c</fullName>
    <label>Modelo del Producto</label>
    <length>40</length>
    <type>Text</type>
</CustomField>