force-app/main/default/objects/WorkOrder/fields/ALK_Instaled_Product__c.field-meta.xml
<CustomField>
    <fullName>ALK_Instaled_Product__c</fullName>
    <label>Nombre del Producto Instalado</label>
    <length>40</length>
    <type>Text</type>
</CustomField>