force-app/main/default/objects/WorkOrder/fields/ALK_Instaled_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>ALK_Instaled_Product_Code__c</fullName>
    <label>Serial Producto Instalado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>