force-app/main/default/objects/WorkOrder/fields/ALK_Massive_Load__c.field-meta.xml
<CustomField>
    <fullName>ALK_Massive_Load__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carga Masiva</label>
    <type>Checkbox</type>
</CustomField>