force-app/main/default/objects/WorkOrder/fields/ALK_Numero_Factura__c.field-meta.xml
<CustomField>
    <fullName>ALK_Numero_Factura__c</fullName>
    <label>Número de la factura</label>
    <length>20</length>
    <type>Text</type>
</CustomField>