force-app/main/default/objects/WorkOrder/fields/ALK_Perfect_Aesthetic_Condition__c.field-meta.xml
<CustomField>
    <fullName>ALK_Perfect_Aesthetic_Condition__c</fullName>
    <label>Producto en perfecto estado estetico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ALK_SFS_Questionary_Answer</valueSetName>
    </valueSet>
</CustomField>