force-app/main/default/objects/WorkOrder/fields/ALK_Product_Good_Condition__c.field-meta.xml
<CustomField>
    <fullName>ALK_Product_Good_Condition__c</fullName>
    <label>Producto en buen estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ALK_SFS_Questionary_Answer</valueSetName>
    </valueSet>
</CustomField>