force-app/main/default/objects/WorkOrder/fields/ALK_Product_Ignites__c.field-meta.xml
<CustomField>
    <fullName>ALK_Product_Ignites__c</fullName>
    <label>Producto Enciende</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ALK_SFS_Questionary_Answer</valueSetName>
    </valueSet>
</CustomField>