force-app/main/default/objects/WorkOrder/fields/ALK_Recomendaciones_Generales__c.field-meta.xml
<CustomField>
    <fullName>ALK_Recomendaciones_Generales__c</fullName>
    <label>Recomendaciones de Servicio</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>