force-app/main/default/objects/WorkOrder/fields/ALK_Send_Quote_Email__c.field-meta.xml
<CustomField>
    <fullName>ALK_Send_Quote_Email__c</fullName>
    <label>Enviar cotizacion al correo electrónico</label>
    <type>Email</type>
</CustomField>