force-app/main/default/objects/WorkOrder/fields/ALK_Service_Conditions_Quote__c.field-meta.xml
<CustomField>
    <fullName>ALK_Service_Conditions_Quote__c</fullName>
    <label>Cond. del servicio y cotización enviada.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ALK_SFS_Questionary_Answer</valueSetName>
    </valueSet>
</CustomField>