force-app/main/default/objects/WorkOrder/fields/ALK_Technician_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>ALK_Technician_Recommendations__c</fullName>
    <label>Recomendaciones del técnico</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>