force-app/main/default/objects/WorkOrder/fields/ALK_Telefono__c.field-meta.xml
<CustomField>
    <fullName>ALK_Telefono__c</fullName>
    <label>Teléfono</label>
    <type>Phone</type>
</CustomField>