force-app/main/default/objects/WorkOrder/fields/ALK_Tienda_Compra__c.field-meta.xml
<CustomField>
    <fullName>ALK_Tienda_Compra__c</fullName>
    <label>Tienda de Compra</label>
    <length>50</length>
    <type>Text</type>
</CustomField>