force-app/main/default/objects/WorkOrder/fields/Formato_con_condiciones_del_servicio__c.field-meta.xml
<CustomField>
    <fullName>Formato_con_condiciones_del_servicio__c</fullName>
    <label>Formato con condiciones del servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ALK_SFS_Questionary_Answer</valueSetName>
    </valueSet>
</CustomField>