force-app/main/default/objects/WorkOrder/recordTypes/ALK_Instalaciones.recordType-meta.xml
<RecordType>
    <fullName>ALK_Instalaciones</fullName>
    <active>true</active>
    <label>Instalaciones</label>
</RecordType>