force-app/main/default/objects/WorkOrder/recordTypes/ALK_Visita_Garantia_Instalacion.recordType-meta.xml
<RecordType>
    <fullName>ALK_Visita_Garantia_Instalacion</fullName>
    <active>true</active>
    <label>Visita de Garantía de Instalación</label>
</RecordType>