force-app/main/default/objects/WorkOrder/recordTypes/ALK_Visita_Garantia_Producto.recordType-meta.xml
<RecordType>
    <fullName>ALK_Visita_Garantia_Producto</fullName>
    <active>true</active>
    <label>Visita de Garantía de Producto</label>
</RecordType>