force-app/main/default/objects/WorkOrder/validationRules/Address_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Mandatory</fullName>
    <active>false</active>
    <description>Address is mandatory for Visita de Garantía de Instalación Or Visita de Garantía de Producto</description>
    <errorConditionFormula>ISBLANK( Street ) 
&amp;&amp;
(( RecordType.DeveloperName == &apos;ALK_Visita_Garantia_Instalacion&apos;)
||
( RecordType.DeveloperName == &apos;ALK_Visita_Garantia_Producto&apos;))</errorConditionFormula>
    <errorDisplayField>Street</errorDisplayField>
    <errorMessage>La dirección no ha sido configurada. Incluya la dirección donde se realizará la visita.</errorMessage>
</ValidationRule>