force-app/main/default/objects/WorkOrder/validationRules/ALK_Fill_Contact_Business_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>ALK_Fill_Contact_Business_Account</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND (Account.RecordType.DeveloperName = &apos;Empresa&apos;,
 ISBLANK(ContactId),
 ALK_Massive_Load__c = false
) , AND (NOT ISNEW(),
 Account.RecordType.DeveloperName = &apos;Empresa&apos;,
 ISBLANK(ContactId),
 ALK_Massive_Load__c = true))</errorConditionFormula>
    <errorDisplayField>ContactId</errorDisplayField>
    <errorMessage>Completa el contacto de la empesa</errorMessage>
</ValidationRule>