force-app/main/default/objects/WorkOrder/validationRules/Block_Work_Order_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Work_Order_Creation</fullName>
    <active>true</active>
    <description>Bloquea la creación de órdenes de trabajo por usuarios que no tienen autorización.</description>
    <errorConditionFormula>AND (
 ISNEW(),
 ALK_FollowUp_WO__c = false,
 $Permission.ALK_Block_Work_Order_Creation
)</errorConditionFormula>
    <errorMessage>Usuario no autorizado para crear órdenes de trabajo</errorMessage>
</ValidationRule>