force-app/main/default/objects/WorkOrder/listViews/ALK_KTR_Ordenes_de_Instalaci_n.listView-meta.xml
<ListView>
    <fullName>ALK_KTR_Ordenes_de_Instalaci_n</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Subject</columns>
    <columns>Status</columns>
    <columns>Priority</columns>
    <filterScope>Mine</filterScope>
    <label>[ALK/KTR] Ordenes de Instalación</label>
</ListView>