force-app/main/default/objects/WorkOrder/listViews/All_WorkOrders.listView-meta.xml
<ListView>
    <fullName>All_WorkOrders</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Account</columns>
    <columns>Priority</columns>
    <columns>Status</columns>
    <columns>ServiceTerritory</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las órdenes de trabajo</label>
</ListView>