force-app/main/default/objects/WorkOrder/listViews/Ordenes_de_Garantia.listView-meta.xml
<ListView>
    <fullName>Ordenes_de_Garantia</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>WorkType</columns>
    <columns>Status</columns>
    <columns>CreatedDate</columns>
    <columns>RecordType</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>WorkOrder.ALK_Visita_Garantia_Producto</value>
    </filters>
    <label>[ALK/KTR] Ordenes Garantía de Producto</label>
</ListView>