force-app/main/default/objects/WorkOrder/listViews/Ordenes_de_Trabajo_Ejecutadas.listView-meta.xml
<ListView>
    <fullName>Ordenes_de_Trabajo_Ejecutadas</fullName>
    <columns>Name</columns>
    <columns>CreatedDate</columns>
    <columns>ALK_Fecha_Compra__c</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>RecordType</columns>
    <columns>WorkType</columns>
    <columns>ServiceTerritory</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Ejecutada</value>
    </filters>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>WorkOrder.ALK_Instalaciones,WorkOrder.ALK_Visita_Garantia_Instalacion,WorkOrder.ALK_Visita_Garantia_Producto</value>
    </filters>
    <label>Órdenes de Trabajo Ejecutadas</label>
</ListView>